fixup!: provide github token
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -394,7 +394,7 @@ jobs:
         working-directory: ./desktop
         shell: bash
         run: |
-          yarn tauri signer generate -- --ci -w ./app.key -p ""
+          yarn tauri signer generate -- --ci -w ./app.key
           TAURI_PUBKEY=$(cat ./app.key.pub)
           jq --arg pubkey "$TAURI_PUBKEY" '.plugins.updater.pubkey = $pubkey' src-tauri/tauri.conf.json > tmp.json && mv tmp.json src-tauri/tauri.conf.json
           UPDATED_PUBKEY=$(jq -r '.plugins.updater.pubkey' src-tauri/tauri.conf.json)
@@ -407,5 +407,5 @@ jobs:
           args: "--target ${{ matrix.target }} ${{ runner.os == 'Linux' && '--config src-tauri/tauri-flatpak.conf.json --bundles appimage,deb,updater' || '' }}"
           includeUpdaterJson: ${{ runner.os == 'Linux' && 'true' || 'false' }}
         env:
+          GITHUB_TOKEN: ${{ github.token }}
           TAURI_SIGNING_PRIVATE_KEY: "${{ github.workspace }}/desktop/app.key"
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ""
