fixup!: hardcode tauri key
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -394,7 +394,7 @@ jobs:
         working-directory: ./desktop
         shell: bash
         run: |
-          yarn tauri signer generate -- --ci -w ./app.key
+          yarn tauri signer generate -- --ci -w ./app.key -p "github-actions"
           TAURI_PUBKEY=$(cat ./app.key.pub)
           jq --arg pubkey "$TAURI_PUBKEY" '.plugins.updater.pubkey = $pubkey' src-tauri/tauri.conf.json > tmp.json && mv tmp.json src-tauri/tauri.conf.json
           UPDATED_PUBKEY=$(jq -r '.plugins.updater.pubkey' src-tauri/tauri.conf.json)
@@ -409,3 +409,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
           TAURI_SIGNING_PRIVATE_KEY: "${{ github.workspace }}/desktop/app.key"
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: "github-actions"
