fixup!: tauri ci for macos
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -312,21 +312,25 @@ jobs:
             runner: ubuntu-latest
             tauri_config_args: "--config src-tauri/tauri-flatpak.conf.json --bundles appimage,deb,updater"
             tauri_include_updater_json: true
+            tauri_ci: true
           - arch: amd64
             target: x86_64-apple-darwin
             runner: macos-latest
             tauri_config_args: ""
             tauri_include_updater_json: false
+            tauri_ci: true
           - arch: arm64
             target: aarch64-apple-darwin
             runner: macos-latest
             tauri_config_args: ""
             tauri_include_updater_json: false
+            tauri_ci: false # https://github.com/tauri-apps/tauri/issues/3055
           - arch: amd64
             target: x86_64-pc-windows-msvc
             runner: windows-latest
             tauri_config_args: ""
             tauri_include_updater_json: false
+            tauri_ci: true
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v6
@@ -415,3 +419,4 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           TAURI_SIGNING_PRIVATE_KEY: "${{ github.workspace }}/desktop/app.key"
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: "github-actions"
+          CI: ${{ matrix.tauri_ci }}
