fixup!: use github token
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -167,7 +167,7 @@ jobs:
           - runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: false
+            needs-github-token: true
             label: machineprovider
           - runner: ubuntu-latest
             free-disk-space: false
