fixup!: create bin directory in e2e
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -239,6 +239,7 @@ jobs:
         working-directory: ./e2e
         run: |
           ls -R /tmp/devpod-bin/
+          mkdir -p ./bin/
           if [ "${{ runner.os }}" == "Windows" ]; then
             find /tmp/devpod-bin/ -name "devpod-${{ steps.os.outputs.runner_os }}-amd64.exe" -exec mv {} ./bin/devpod-${{ steps.os.outputs.runner_os }}-amd64.exe \;
           else
