--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -238,18 +238,20 @@ jobs:
         shell: bash
         working-directory: ./e2e
         run: |
-          TEMP_DIR="${{ runner.temp }}"
-          # Convert Windows path to Unix-style for bash
-          TEMP_DIR="${TEMP_DIR//\\//}"
-          ls -R "$TEMP_DIR/devpod-bin/"
-          mkdir -p ./bin/
           if [ "${{ runner.os }}" == "Windows" ]; then
+            TEMP_DIR="${{ runner.temp }}"
+            TEMP_DIR="${TEMP_DIR//\\//}"
+            ls -R "$TEMP_DIR/devpod-bin/"
+            mkdir -p ./bin/
             find "$TEMP_DIR/devpod-bin/" -name "devpod-${{ steps.os.outputs.runner_os }}-amd64.exe" -exec mv {} ./bin/devpod-${{ steps.os.outputs.runner_os }}-amd64.exe \;
+            ls -R ./bin/
           else
-            find "$TEMP_DIR/devpod-bin/" -name "devpod-${{ steps.os.outputs.runner_os }}-amd64" -exec mv {} ./bin/devpod-${{ steps.os.outputs.runner_os }}-amd64 \;
+            ls -R "${{ runner.temp }}/devpod-bin/"
+            mkdir -p ./bin/
+            find "${{ runner.temp }}/devpod-bin/" -name "devpod-${{ steps.os.outputs.runner_os }}-amd64" -exec mv {} ./bin/devpod-${{ steps.os.outputs.runner_os }}-amd64 \;
             chmod +x "./bin/devpod-${{ steps.os.outputs.runner_os }}-amd64"
+            ls -R ./bin/
           fi
-          ls -R ./bin/
 
       # NOTE: engineerd/setup-kind does not work on Windows runners
       - name: setup kind
